# pdfool

./: .gitmodules  CMakeLists.txt
3rd/poppler-25.09.1/: CMakeLists.txt  ChangeLog
3rd/poppler-25.09.1/glib/reference/html/: index.html  poppler-Poppler-Features.html
src/: pdfool-crop.c
test/: poc.py
